// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StraightTileModel can build a tile with the given size 1`] = `
StraightTileModel {
  "direction": "right",
  "id": "straight-tile-1",
  "ratio": 1,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
}
`;

exports[`StraightTileModel can build a tile with the given size and a ratio of 0.5 1`] = `
StraightTileModel {
  "direction": "left",
  "id": "straight-tile-0.5",
  "ratio": 0.5,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
}
`;

exports[`StraightTileModel can build a tile with the given size and a ratio of 1 1`] = `
StraightTileModel {
  "direction": "left",
  "id": "straight-tile-1",
  "ratio": 1,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
}
`;

exports[`StraightTileModel can build a tile with the given size and a ratio of 2 1`] = `
StraightTileModel {
  "direction": "left",
  "id": "straight-tile-2",
  "ratio": 2,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
}
`;

exports[`StraightTileModel can build a tile with the given size and a ratio of 3 1`] = `
StraightTileModel {
  "direction": "left",
  "id": "straight-tile-3",
  "ratio": 3,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
}
`;

exports[`StraightTileModel can build a tile with the given size and a ratio of 4 1`] = `
StraightTileModel {
  "direction": "left",
  "id": "straight-tile-4",
  "ratio": 4,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
}
`;

exports[`StraightTileModel can build a tile with the given size and direction 1`] = `
StraightTileModel {
  "direction": "left",
  "id": "straight-tile-1",
  "ratio": 1,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
}
`;

exports[`StraightTileModel can compute the angle of the curve for a tile with a ratio of 0.5 1`] = `0`;

exports[`StraightTileModel can compute the angle of the curve for a tile with a ratio of 1 1`] = `0`;

exports[`StraightTileModel can compute the angle of the curve for a tile with a ratio of 2 1`] = `0`;

exports[`StraightTileModel can compute the angle of the curve for a tile with a ratio of 3 1`] = `0`;

exports[`StraightTileModel can compute the angle of the curve for a tile with a ratio of 4 1`] = `0`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 0.5 1`] = `0`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 0.5 2`] = `90`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 0.5 3`] = `0`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 0.5 4`] = `90`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 1 1`] = `0`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 1 2`] = `90`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 1 3`] = `0`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 1 4`] = `90`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 2 1`] = `0`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 2 2`] = `90`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 2 3`] = `0`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 2 4`] = `90`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 3 1`] = `0`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 3 2`] = `90`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 3 3`] = `0`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 3 4`] = `90`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 4 1`] = `0`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 4 2`] = `90`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 4 3`] = `0`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 4 4`] = `90`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 0.5 1`] = `0`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 0.5 2`] = `90`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 0.5 3`] = `0`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 0.5 4`] = `90`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 1 1`] = `0`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 1 2`] = `90`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 1 3`] = `0`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 1 4`] = `90`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 2 1`] = `0`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 2 2`] = `90`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 2 3`] = `0`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 2 4`] = `90`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 3 1`] = `0`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 3 2`] = `90`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 3 3`] = `0`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 3 4`] = `90`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 4 1`] = `0`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 4 2`] = `90`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 4 3`] = `0`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 4 4`] = `90`;

exports[`StraightTileModel can compute the center of the curve for a tile with a ratio of 0.5 1`] = `
Vector2D {
  "x": -55,
  "y": 0,
}
`;

exports[`StraightTileModel can compute the center of the curve for a tile with a ratio of 0.5 2`] = `
Vector2D {
  "x": 45,
  "y": 100,
}
`;

exports[`StraightTileModel can compute the center of the curve for a tile with a ratio of 1 1`] = `
Vector2D {
  "x": -55,
  "y": 0,
}
`;

exports[`StraightTileModel can compute the center of the curve for a tile with a ratio of 1 2`] = `
Vector2D {
  "x": 45,
  "y": 100,
}
`;

exports[`StraightTileModel can compute the center of the curve for a tile with a ratio of 2 1`] = `
Vector2D {
  "x": -165,
  "y": 0,
}
`;

exports[`StraightTileModel can compute the center of the curve for a tile with a ratio of 2 2`] = `
Vector2D {
  "x": -65,
  "y": 100,
}
`;

exports[`StraightTileModel can compute the center of the curve for a tile with a ratio of 3 1`] = `
Vector2D {
  "x": -275,
  "y": 0,
}
`;

exports[`StraightTileModel can compute the center of the curve for a tile with a ratio of 3 2`] = `
Vector2D {
  "x": -175,
  "y": 100,
}
`;

exports[`StraightTileModel can compute the center of the curve for a tile with a ratio of 4 1`] = `
Vector2D {
  "x": -385,
  "y": 0,
}
`;

exports[`StraightTileModel can compute the center of the curve for a tile with a ratio of 4 2`] = `
Vector2D {
  "x": -285,
  "y": 100,
}
`;

exports[`StraightTileModel can compute the coordinates of the tile oriented to the left with a ratio of 1 and positioned at [100, 100] rotated by 45 degrees 1`] = `
Object {
  "angle": 45,
  "centerCoord": Vector2D {
    "x": 61.10912703473989,
    "y": 138.89087296526012,
  },
  "id": "straight-tile-1",
  "model": StraightTileModel {
    "direction": "left",
    "id": "straight-tile-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
    },
  },
  "outputAngle": 45,
  "outputCoord": Vector2D {
    "x": 22.218254069479784,
    "y": 177.78174593052023,
  },
  "x": 100,
  "y": 100,
}
`;

exports[`StraightTileModel can compute the coordinates of the tile oriented to the left with a ratio of 1 and positioned at [undefined, undefined] rotated by undefined degrees 1`] = `
Object {
  "angle": 0,
  "centerCoord": Vector2D {
    "x": 0,
    "y": 55,
  },
  "id": "straight-tile-1",
  "model": StraightTileModel {
    "direction": "left",
    "id": "straight-tile-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
    },
  },
  "outputAngle": 0,
  "outputCoord": Vector2D {
    "x": 0,
    "y": 110,
  },
  "x": 0,
  "y": 0,
}
`;

exports[`StraightTileModel can compute the coordinates of the tile oriented to the left with a ratio of 2 and positioned at [100, 100] rotated by 405 degrees 1`] = `
Object {
  "angle": 45,
  "centerCoord": Vector2D {
    "x": 22.218254069479784,
    "y": 177.78174593052023,
  },
  "id": "straight-tile-2",
  "model": StraightTileModel {
    "direction": "left",
    "id": "straight-tile-2",
    "ratio": 2,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
    },
  },
  "outputAngle": 45,
  "outputCoord": Vector2D {
    "x": -55.56349186104043,
    "y": 255.56349186104046,
  },
  "x": 100,
  "y": 100,
}
`;

exports[`StraightTileModel can compute the coordinates of the tile oriented to the right with a ratio of 1 and positioned at [100, 100] rotated by 45 degrees 1`] = `
Object {
  "angle": 45,
  "centerCoord": Vector2D {
    "x": 61.10912703473989,
    "y": 138.89087296526012,
  },
  "id": "straight-tile-1",
  "model": StraightTileModel {
    "direction": "right",
    "id": "straight-tile-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
    },
  },
  "outputAngle": 45,
  "outputCoord": Vector2D {
    "x": 22.218254069479784,
    "y": 177.78174593052023,
  },
  "x": 100,
  "y": 100,
}
`;

exports[`StraightTileModel can compute the coordinates of the tile oriented to the right with a ratio of 1 and positioned at [undefined, undefined] rotated by undefined degrees 1`] = `
Object {
  "angle": 0,
  "centerCoord": Vector2D {
    "x": 0,
    "y": 55,
  },
  "id": "straight-tile-1",
  "model": StraightTileModel {
    "direction": "right",
    "id": "straight-tile-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
    },
  },
  "outputAngle": 0,
  "outputCoord": Vector2D {
    "x": 0,
    "y": 110,
  },
  "x": 0,
  "y": 0,
}
`;

exports[`StraightTileModel can compute the coordinates of the tile oriented to the right with a ratio of 2 and positioned at [100, 100] rotated by 405 degrees 1`] = `
Object {
  "angle": 45,
  "centerCoord": Vector2D {
    "x": 22.218254069479784,
    "y": 177.78174593052023,
  },
  "id": "straight-tile-2",
  "model": StraightTileModel {
    "direction": "right",
    "id": "straight-tile-2",
    "ratio": 2,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
    },
  },
  "outputAngle": 45,
  "outputCoord": Vector2D {
    "x": -55.56349186104043,
    "y": 255.56349186104046,
  },
  "x": 100,
  "y": 100,
}
`;

exports[`StraightTileModel can compute the inner radius of the curve for a tile with a ratio of 0.5 1`] = `10`;

exports[`StraightTileModel can compute the inner radius of the curve for a tile with a ratio of 1 1`] = `10`;

exports[`StraightTileModel can compute the inner radius of the curve for a tile with a ratio of 2 1`] = `120`;

exports[`StraightTileModel can compute the inner radius of the curve for a tile with a ratio of 3 1`] = `230`;

exports[`StraightTileModel can compute the inner radius of the curve for a tile with a ratio of 4 1`] = `340`;

exports[`StraightTileModel can compute the number of chunks by side for a tile with a ratio of 0.5 1`] = `2`;

exports[`StraightTileModel can compute the number of chunks by side for a tile with a ratio of 1 1`] = `4`;

exports[`StraightTileModel can compute the number of chunks by side for a tile with a ratio of 2 1`] = `8`;

exports[`StraightTileModel can compute the number of chunks by side for a tile with a ratio of 3 1`] = `12`;

exports[`StraightTileModel can compute the number of chunks by side for a tile with a ratio of 4 1`] = `16`;

exports[`StraightTileModel can compute the number of chunks for the inner curve for a tile with a ratio of 0.5 1`] = `1`;

exports[`StraightTileModel can compute the number of chunks for the inner curve for a tile with a ratio of 1 1`] = `2`;

exports[`StraightTileModel can compute the number of chunks for the inner curve for a tile with a ratio of 2 1`] = `4`;

exports[`StraightTileModel can compute the number of chunks for the inner curve for a tile with a ratio of 3 1`] = `4`;

exports[`StraightTileModel can compute the number of chunks for the inner curve for a tile with a ratio of 4 1`] = `4`;

exports[`StraightTileModel can compute the number of chunks for the outer curve for a tile with a ratio of 0.5 1`] = `2`;

exports[`StraightTileModel can compute the number of chunks for the outer curve for a tile with a ratio of 1 1`] = `4`;

exports[`StraightTileModel can compute the number of chunks for the outer curve for a tile with a ratio of 2 1`] = `4`;

exports[`StraightTileModel can compute the number of chunks for the outer curve for a tile with a ratio of 3 1`] = `4`;

exports[`StraightTileModel can compute the number of chunks for the outer curve for a tile with a ratio of 4 1`] = `4`;

exports[`StraightTileModel can compute the outer radius of the curve for a tile with a ratio of 0.5 1`] = `100`;

exports[`StraightTileModel can compute the outer radius of the curve for a tile with a ratio of 1 1`] = `100`;

exports[`StraightTileModel can compute the outer radius of the curve for a tile with a ratio of 2 1`] = `210`;

exports[`StraightTileModel can compute the outer radius of the curve for a tile with a ratio of 3 1`] = `320`;

exports[`StraightTileModel can compute the outer radius of the curve for a tile with a ratio of 4 1`] = `430`;

exports[`StraightTileModel can compute the position of the center point for a tile with a ratio of 0.5 1`] = `
Vector2D {
  "x": 0,
  "y": 27.5,
}
`;

exports[`StraightTileModel can compute the position of the center point for a tile with a ratio of 0.5 2`] = `
Vector2D {
  "x": 100,
  "y": 127.5,
}
`;

exports[`StraightTileModel can compute the position of the center point for a tile with a ratio of 0.5 3`] = `
Vector2D {
  "x": 72.5,
  "y": 100,
}
`;

exports[`StraightTileModel can compute the position of the center point for a tile with a ratio of 1 1`] = `
Vector2D {
  "x": 0,
  "y": 55,
}
`;

exports[`StraightTileModel can compute the position of the center point for a tile with a ratio of 1 2`] = `
Vector2D {
  "x": 100,
  "y": 155,
}
`;

exports[`StraightTileModel can compute the position of the center point for a tile with a ratio of 1 3`] = `
Vector2D {
  "x": 45,
  "y": 100,
}
`;

exports[`StraightTileModel can compute the position of the center point for a tile with a ratio of 2 1`] = `
Vector2D {
  "x": 0,
  "y": 110,
}
`;

exports[`StraightTileModel can compute the position of the center point for a tile with a ratio of 2 2`] = `
Vector2D {
  "x": 100,
  "y": 210,
}
`;

exports[`StraightTileModel can compute the position of the center point for a tile with a ratio of 2 3`] = `
Vector2D {
  "x": -10,
  "y": 100,
}
`;

exports[`StraightTileModel can compute the position of the center point for a tile with a ratio of 3 1`] = `
Vector2D {
  "x": 0,
  "y": 165,
}
`;

exports[`StraightTileModel can compute the position of the center point for a tile with a ratio of 3 2`] = `
Vector2D {
  "x": 100,
  "y": 265,
}
`;

exports[`StraightTileModel can compute the position of the center point for a tile with a ratio of 3 3`] = `
Vector2D {
  "x": -65,
  "y": 100.00000000000001,
}
`;

exports[`StraightTileModel can compute the position of the center point for a tile with a ratio of 4 1`] = `
Vector2D {
  "x": 0,
  "y": 220,
}
`;

exports[`StraightTileModel can compute the position of the center point for a tile with a ratio of 4 2`] = `
Vector2D {
  "x": 100,
  "y": 320,
}
`;

exports[`StraightTileModel can compute the position of the center point for a tile with a ratio of 4 3`] = `
Vector2D {
  "x": -120,
  "y": 100.00000000000001,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 0.5 1`] = `
Vector2D {
  "x": 0,
  "y": 55,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 0.5 2`] = `
Vector2D {
  "x": 100,
  "y": 155,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 0.5 3`] = `
Vector2D {
  "x": 45,
  "y": 100,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 0.5 4`] = `
Vector2D {
  "x": 0,
  "y": 55,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 0.5 5`] = `
Vector2D {
  "x": 100,
  "y": 155,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 0.5 6`] = `
Vector2D {
  "x": 45,
  "y": 100,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 1 1`] = `
Vector2D {
  "x": 0,
  "y": 110,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 1 2`] = `
Vector2D {
  "x": 100,
  "y": 210,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 1 3`] = `
Vector2D {
  "x": -10,
  "y": 100,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 1 4`] = `
Vector2D {
  "x": 0,
  "y": 110,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 1 5`] = `
Vector2D {
  "x": 100,
  "y": 210,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 1 6`] = `
Vector2D {
  "x": -10,
  "y": 100,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 2 1`] = `
Vector2D {
  "x": 0,
  "y": 220,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 2 2`] = `
Vector2D {
  "x": 100,
  "y": 320,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 2 3`] = `
Vector2D {
  "x": -120,
  "y": 100.00000000000001,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 2 4`] = `
Vector2D {
  "x": 0,
  "y": 220,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 2 5`] = `
Vector2D {
  "x": 100,
  "y": 320,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 2 6`] = `
Vector2D {
  "x": -120,
  "y": 100.00000000000001,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 3 1`] = `
Vector2D {
  "x": 0,
  "y": 330,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 3 2`] = `
Vector2D {
  "x": 100,
  "y": 430,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 3 3`] = `
Vector2D {
  "x": -230,
  "y": 100.00000000000001,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 3 4`] = `
Vector2D {
  "x": 0,
  "y": 330,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 3 5`] = `
Vector2D {
  "x": 100,
  "y": 430,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 3 6`] = `
Vector2D {
  "x": -230,
  "y": 100.00000000000001,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 4 1`] = `
Vector2D {
  "x": 0,
  "y": 440,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 4 2`] = `
Vector2D {
  "x": 100,
  "y": 540,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 4 3`] = `
Vector2D {
  "x": -340,
  "y": 100.00000000000003,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 4 4`] = `
Vector2D {
  "x": 0,
  "y": 440,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 4 5`] = `
Vector2D {
  "x": 100,
  "y": 540,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 4 6`] = `
Vector2D {
  "x": -340,
  "y": 100.00000000000003,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 0.5 1`] = `
Vector2D {
  "x": 0,
  "y": 55,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 0.5 2`] = `
Vector2D {
  "x": 100,
  "y": 155,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 0.5 3`] = `
Vector2D {
  "x": 45,
  "y": 100,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 0.5 4`] = `
Vector2D {
  "x": 0,
  "y": 55,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 0.5 5`] = `
Vector2D {
  "x": 100,
  "y": 155,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 0.5 6`] = `
Vector2D {
  "x": 45,
  "y": 100,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 1 1`] = `
Vector2D {
  "x": 0,
  "y": 110,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 1 2`] = `
Vector2D {
  "x": 100,
  "y": 210,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 1 3`] = `
Vector2D {
  "x": -10,
  "y": 100,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 1 4`] = `
Vector2D {
  "x": 0,
  "y": 110,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 1 5`] = `
Vector2D {
  "x": 100,
  "y": 210,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 1 6`] = `
Vector2D {
  "x": -10,
  "y": 100,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 2 1`] = `
Vector2D {
  "x": 0,
  "y": 220,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 2 2`] = `
Vector2D {
  "x": 100,
  "y": 320,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 2 3`] = `
Vector2D {
  "x": -120,
  "y": 100.00000000000001,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 2 4`] = `
Vector2D {
  "x": 0,
  "y": 220,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 2 5`] = `
Vector2D {
  "x": 100,
  "y": 320,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 2 6`] = `
Vector2D {
  "x": -120,
  "y": 100.00000000000001,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 3 1`] = `
Vector2D {
  "x": 0,
  "y": 330,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 3 2`] = `
Vector2D {
  "x": 100,
  "y": 430,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 3 3`] = `
Vector2D {
  "x": -230,
  "y": 100.00000000000001,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 3 4`] = `
Vector2D {
  "x": 0,
  "y": 330,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 3 5`] = `
Vector2D {
  "x": 100,
  "y": 430,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 3 6`] = `
Vector2D {
  "x": -230,
  "y": 100.00000000000001,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 4 1`] = `
Vector2D {
  "x": 0,
  "y": 440,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 4 2`] = `
Vector2D {
  "x": 100,
  "y": 540,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 4 3`] = `
Vector2D {
  "x": -340,
  "y": 100.00000000000003,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 4 4`] = `
Vector2D {
  "x": 0,
  "y": 440,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 4 5`] = `
Vector2D {
  "x": 100,
  "y": 540,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 4 6`] = `
Vector2D {
  "x": -340,
  "y": 100.00000000000003,
}
`;

exports[`StraightTileModel can compute the rotation angle for a tile oriented to the left with a ratio of 0.5 1`] = `180`;

exports[`StraightTileModel can compute the rotation angle for a tile oriented to the left with a ratio of 0.5 2`] = `180`;

exports[`StraightTileModel can compute the rotation angle for a tile oriented to the left with a ratio of 1 1`] = `180`;

exports[`StraightTileModel can compute the rotation angle for a tile oriented to the left with a ratio of 1 2`] = `180`;

exports[`StraightTileModel can compute the rotation angle for a tile oriented to the left with a ratio of 2 1`] = `180`;

exports[`StraightTileModel can compute the rotation angle for a tile oriented to the left with a ratio of 2 2`] = `180`;

exports[`StraightTileModel can compute the rotation angle for a tile oriented to the left with a ratio of 3 1`] = `180`;

exports[`StraightTileModel can compute the rotation angle for a tile oriented to the left with a ratio of 3 2`] = `180`;

exports[`StraightTileModel can compute the rotation angle for a tile oriented to the left with a ratio of 4 1`] = `180`;

exports[`StraightTileModel can compute the rotation angle for a tile oriented to the left with a ratio of 4 2`] = `180`;

exports[`StraightTileModel can compute the rotation angle for a tile oriented to the right with a ratio of 0.5 1`] = `0`;

exports[`StraightTileModel can compute the rotation angle for a tile oriented to the right with a ratio of 0.5 2`] = `0`;

exports[`StraightTileModel can compute the rotation angle for a tile oriented to the right with a ratio of 1 1`] = `0`;

exports[`StraightTileModel can compute the rotation angle for a tile oriented to the right with a ratio of 1 2`] = `0`;

exports[`StraightTileModel can compute the rotation angle for a tile oriented to the right with a ratio of 2 1`] = `0`;

exports[`StraightTileModel can compute the rotation angle for a tile oriented to the right with a ratio of 2 2`] = `0`;

exports[`StraightTileModel can compute the rotation angle for a tile oriented to the right with a ratio of 3 1`] = `0`;

exports[`StraightTileModel can compute the rotation angle for a tile oriented to the right with a ratio of 3 2`] = `0`;

exports[`StraightTileModel can compute the rotation angle for a tile oriented to the right with a ratio of 4 1`] = `0`;

exports[`StraightTileModel can compute the rotation angle for a tile oriented to the right with a ratio of 4 2`] = `0`;

exports[`StraightTileModel can compute the side of the curve for a tile with a ratio of 0.5 1`] = `0`;

exports[`StraightTileModel can compute the side of the curve for a tile with a ratio of 1 1`] = `0`;

exports[`StraightTileModel can compute the side of the curve for a tile with a ratio of 2 1`] = `0`;

exports[`StraightTileModel can compute the side of the curve for a tile with a ratio of 3 1`] = `0`;

exports[`StraightTileModel can compute the side of the curve for a tile with a ratio of 4 1`] = `0`;

exports[`StraightTileModel can export to an object a tile oriented to the left having a ratio of 1 1`] = `
Object {
  "direction": "left",
  "ratio": 1,
  "type": "straight-tile",
}
`;

exports[`StraightTileModel can export to an object a tile oriented to the left having a ratio of 2 1`] = `
Object {
  "direction": "left",
  "ratio": 2,
  "type": "straight-tile",
}
`;

exports[`StraightTileModel can export to an object a tile oriented to the right having a ratio of 1 1`] = `
Object {
  "direction": "right",
  "ratio": 1,
  "type": "straight-tile",
}
`;

exports[`StraightTileModel can export to an object a tile oriented to the right having a ratio of 2 1`] = `
Object {
  "direction": "right",
  "ratio": 2,
  "type": "straight-tile",
}
`;
